<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>
    <EditTextPreference
        android:key="@string/pref_country_key"
        android:title="@string/pref_country_label"
        android:defaultValue="@string/pref_country_default"
        android:inputType="text"
        android:singleLine="true"/>

    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:title="@string/units_title"
        android:key="@string/pref_units_key"
        android:entryValues="@array/pref_units_values"

        />
    <!--<SwitchPreference-->
        <!--android:switchTextOff="@string/pref_units_imperial"-->
        <!--android:switchTextOn="@string/pref_units_metric"-->
        <!--android:title="units"-->
        <!--android:defaultValue="true"-->
        <!--/>-->
</PreferenceScreen>